--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -7,7 +7,11 @@
     <title> {% trans "Bill" %} {{ bookshop.name }}</title>
 
     <style>
-     @page {
+      .new-page {
+         page-break-before: always;
+      }
+
+      @page {
          font-family: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
          font-size: 14px;
          color: #555;
@@ -98,7 +102,7 @@
 </head>
 
 <body>
-    <div class="invoice-box">
+    <div class="invoice-box new-page">
         <table cellpadding="0" cellspacing="0">
             <tr class="top">
                 <td colspan="2">
@@ -211,6 +215,48 @@
                 </td>
             </tr>
         </table>
+    </div>
+
+
+    <div class="invoice-box new-page">
+      <table>
+        <thead>
+          <tr>
+            <th>
+              {% trans "Title" %}
+            </th>
+            <th>
+              {% trans "Publisher" %}
+            </th>
+            <th style="text-align: right">
+              {% trans "Price" %}
+            </th>
+            <th style="text-align: right">
+              {% trans "Quantity" %}
+            </th>
+          </tr>
+        </thead>
+
+        <tbody>
+          {% for card_qty in cards_data %}
+          <tr>
+            <td style="text-align: left">
+              {{ card_qty.0.title }}
+            </td>
+            <td style="text-align: left">
+              {{ card_qty.0.pubs_repr }}
+            </td>
+            <td style="text-align: right">
+              {{ card_qty.0.price_fmt }}
+            </td>
+            <td style="text-align: right">
+              x {{ card_qty.1 }}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+
+      </table>
     </div>
 </body>
 </html>
