--- a/templates/registration/logout.pug
+++ b/templates/registration/logout.pug
@@ -14,7 +14,7 @@
 // You should have received a copy of the GNU General Public License
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 
-{% extends "registration/headers.jade" %}
+{% extends "registration/headers.pug" %}
 {% load i18n %}
 
 {% block content %}
