--- a/templates/registration/headers.pug
+++ b/templates/registration/headers.pug
@@ -27,8 +27,8 @@ html
     script(type='text/javascript', src="{% static 'bower_components/jquery/jquery.js' %}") // load jquery before django_bootstrap.
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     //- script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
-    script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
-      div {% block pagetitle %} {% endblock %}
+    //- script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
+    //-   div {% block pagetitle %} {% endblock %}
 
   body.container
     {% block content %}
