--- a/templates/search/card_edit.pug
+++ b/templates/search/card_edit.pug
@@ -20,107 +20,21 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
-{% bootstrap_javascript %}
-{% load ngfilter %}
 
-h3 {% trans "Card" %}
-div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
+if messages
+  ul.messages
+    for msg in messages
+      li  {{ msg }}
 
- div
-    alert(
-      ng-repeat="alert in alerts"
-      type="{{ 'alert.level' | ng }}"
-      close="closeAlert($item)"
-      ng-click="closeAlert($item)"
-    )
-      {{ 'alert.message' | ng }}
+h1 {% trans "Edit this card" %}
 
- form(ng-show="card", name="form")
-  .row
-    .col-lg-12
-        div.form-group
-            label {% trans "Title" %}:
-            input.form-control(type="text", ng-model="title", required="", id="input-title", name="title")
-            div.form-control(ng-show="form.$submitted || form.title.$touched")
-              span.help-block(ng-show="form.title.$error.required") {% trans "The title is required" %}
+form(action="{% url 'search:card_edit' pk %}", method="post")
+  .col-lg-6
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    input.btn.btn-primary(type="submit", value="{% trans 'Validate' %}")
 
-  .row
-    .col-lg-4
-            div.form-group
-                label {% trans "Public price" %}:
-                input.form-control(type="number", step="0.1", min="0", ng-model="price")
-                label Type:
-                select.form-control(ng-model="type", ng-options="type.fields.name for type in card_types")
-                label {% trans "Shelf" %}:
-                select.form-control(ng-model="shelf", ng-options="cat.fields.name for cat in shelfs")
-
-    .col-lg-4
-      div.form-group
-        //- span(class="isbn-{%verbatim%}{{no_isbn}}{% endverbatim %}") isbn
-       div
-        label {% trans "this card has no isbn" %}
-        input(type="checkbox", ng-model="no_isbn")
-       label {% trans "isbn" %}
-       input.form-control(type="text", ng-model="isbn", ng-show="!no_isbn")
-
-    .col-lg-4
-        label {% trans "year of publication" %}:
-        input.form-control(type="number", min="1500", ng-model="year_published")
-        label {% trans "homepage" %}
-        input.form-control(type="url", ng-model="details_url")
-
-  .row
-    .col-lg-4
-        label {% trans "Minimal qty" %}
-        input.form-control(type="number", min="0", ng-model="threshold")
-
-  .row
-    .col-lg-6
-        h4 {% trans "Authors" %}:
-        span
-              input(
-                  type="text",
-                  ng-model="{% verbatim %} author_input {% endverbatim %}"
-                  uib-typeahead="{% verbatim %} author.fields.name for author in getItemsApi('/api/authors', $viewValue, 'authors_selected') {% endverbatim %}"
-                  typeahead-min-length="3"
-                  typeahead-on-select="add_selected_item($item, 'author_input', 'authors_selected')"
-              )
-              a(target="_blank", href="/admin/search/author/add")
-                i.glyphicon.glyphicon-plus-sign
-
-         span(ng-repeat="auth in authors_selected")
-          //- div {{ 'auth.name ' | ng }}
-          span {{ 'auth.fields.name ' | ng }}
-            i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'authors_selected')")
-
-
-        h4 {% trans "Publishers" %}
-        span
-          select.form-control(
-            ng-model="pubs_selected",
-            ng-options="it.fields.name for it in publishers")
-
-          a(target="_blank", href="/admin/search/publisher/add")
-            i.glyphicon.glyphicon-plus-sign
-
-        span(ng-repeat="pub in pubs_selected")
-          span {{ 'pub.fields.name ' | ng }}
-            i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index, 'pubs_selected')")
-
-        h4 {% trans "Supplier" %}: {{ 'distributor.repr' | ng }}
-
-        div.col-lg-8
-          span {% trans "Change supplier" %}:
-                select.form-control(
-                  ng-model="distributor_selected",
-                  ng-options="dist.repr for dist in distributor_list")
-
-          span
-            a(target="_blank", href="/admin/search/distributor/add",title='{% trans "Create a supplier" %}')
-              i.glyphicon.glyphicon-plus-sign()
-
-
-  .row
-    input.btn.btn-primary(value="{% trans 'Validate' %}", ng-click="validate('view')", type="submit", ng-disabled="form.$invalid")
+  .col-lg-6
+    input.btn.btn-primary(type="submit", value="{% trans 'Validate' %}")
 
 {% endblock content %}
