dj21: use class-based login view

--- a/templates/registration/login.jade
+++ b/templates/registration/login.jade
@@ -20,7 +20,7 @@
 {% block content %}
 .col-lg-4
 .col-lg-4
-   form.form-signin(method="post", action="{% url 'django.contrib.auth.views.login' %}")
+   form.form-signin(method="post", action="{% url 'django.contrib.auth.views.LoginView().as_view' %}")
     {% csrf_token %}
     h2.form-signin-heading {% trans "Please sign in to Abelujo" %}
     table.table-condensed
