dj21 deprecated: load staticfiles -> load static

--- a/templates/registration/headers.pug
+++ b/templates/registration/headers.pug
@@ -15,7 +15,7 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 !!!5
 
 html
