--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -181,7 +181,7 @@ div(ng-cloak, ng-controller="collectionController")
 
 
 
- div(ng-show="cards.length == 0") {% trans "No results" %}
+ div(ng-show="! first_page_load && cards.length == 0 ") {% trans "No results" %}
 
  table.row-border.hover.table.table-condensed.table-striped(ng-show="cards.length != 0")
     thead
