--- a/templates/base.jade
+++ b/templates/base.jade
@@ -30,6 +30,7 @@ html(ng-app="abelujo")
     // index.css: element-ui
     link(rel='stylesheet', type='text/css', href='{% static "css/index.css" %}')
 
+    script(defer, src="https://cdn.jsdelivr.net/npm/notiflix@2.1.3/dist/AIO/notiflix-aio-2.1.3.min.js")
     script(src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
 
