--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -49,7 +49,7 @@ div#abelujo
     a.btn.btn-default(href="#", title='{% trans "Add 1 copy to the default place" %}', onclick="card_add_one_to_default_place({{ object.pk }})")
       i.glyphicon.glyphicon-plus 1
     a.btn.btn-default(href="#", title='{% trans "Remove 1 copy to the default place" %}', onclick="card_remove_one_from_default_place({{ object.pk }})")
-      i.glyphicon.glyphicon-plus -1
+      i.glyphicon.glyphicon-minus 1
     h3 {{ object.title }}
 
 .row
