base.jade: don't load the in-dev Vue app
[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -148,5 +148,5 @@ html(ng-app="abelujo")
                 {% endblock content %}
 
   // brunch: load our Vue app.
-  script
+  // script
       | require("static/vue/main")
