(minor) card show: don't show all the places if the card is not in stock
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -126,7 +126,10 @@ div#abelujo
 
           tr
             td {% trans "Presente in" %}
-            td
+            if not object.quantity
+              td ---
+            else
+             td
               table.table.table-condensed
                 for name_qty in places_quantities
                   tr
