--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -107,7 +107,8 @@ div#abelujo
             td {% trans "Supplier" %}
             td
               for dist in object.get_distributor
-                  div: a(href="{{dist.get_absolute_url}}", target="_blank") {{ dist.repr }}
+                  span: a(href="{{dist.get_absolute_url}}", target="_blank") {{ dist.repr }}
+                  span {% if dist.gln %} ({{dist.gln}}) {% endif %}
           if object.get_distributor and object.distributor.dilicom_enabled
             tr
               td {% trans "Commande via Dilicom ?" %}
