card show: price excl. VAT (prix HT), from Dilicom
we don't save it nor the vat on DB for each book. Yet?

[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -63,6 +63,8 @@ div#abelujo
       .row(style="margin-left: 1px;")
 
         h4 {{ object.price_fmt }}
+          if object.vat1
+            span &nbsp; ({{ object.price_excl_vat }}, {{ object.vat1 }}%)
         table.table.table-condensed.table-bordered
           tbody
             tr
