--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -64,7 +64,7 @@ div#abelujo
 
         h4 {{ object.price_fmt }}
           if object.vat1
-            span &nbsp; ({{ object.price_excl_vat }}, {{ object.vat1 }}%)
+            span(title="{{ object.vat1 }}% of {{ object.price }} is {{ object.check_vat.0 }}. Actual tax is {{ object.check_vat.1 }}%") &nbsp; ({{ object.price_excl_vat }}, {{ object.vat1 }}%)
         table.table.table-condensed.table-bordered
           tbody
             tr
