card show: display parent theme / current theme
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -133,7 +133,7 @@ div#abelujo
                 td {% trans "Theme" %}: 
                 td(title="CLIL code: {{ object.theme }}")
                   if object.theme
-                    {{ object.theme_name }}
+                    {{ object.parent_theme_name }} / {{ object.theme_name }}
 
           tr(class="{% if object.quantity > 0 %} active {% elif object.quantity < 0 %} danger {% endif %}")
             td {% trans "In stock" %}
