Card: show collection. Remove Collection class, unused and not necessary
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -129,6 +129,13 @@ div#abelujo
             tr
               td {% trans "Commande via Dilicom ?" %}
               td {{ object.distributor.is_comm_via_dilicom }}
+
+          tr
+              td {% trans "Collection" %}
+              td
+                if object.collection
+                  {{ object.collection }}
+
           tr
               td {% trans "Shelf" %}: 
               td
