(minor) Deposit: add a create button on a deposit page
[ci skip]

--- a/templates/search/deposits_view.jade
+++ b/templates/search/deposits_view.jade
@@ -30,6 +30,7 @@
 {% load humanize %}
 
 .row
+  a.btn.btn-primary(href="{% url 'deposits_new' %}") {% trans "New deposit" %}
   .col-md-12
     h4 {% trans "Deposit" %}  {{ deposit.name | upper }}
 
