(minor) Card show: add "create deposit" button if not in stock nor in deposits
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -178,6 +178,9 @@ div#abelujo
             td
                 for dep_tup in object.deposits
                   div: a(href="/deposits/{{ dep_tup.1 }}") {{ dep_tup.0 }}
+                if not object.deposits and not object.quantity
+                  span --- &nbsp;
+                    a(href="{% url 'deposits_new' %}") ({% trans "Create" %})
 
    .row
           if object.summary
