--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -139,6 +139,7 @@ div(ng-cloak, ng-controller="collectionController")
        ul.dropdown-menu
          li: a(href="#", ng-click="add_to_lists()", ng-show="selected", title='{% trans "Add the cards selected to basket(s)" %}'){% trans 'Add selection to baskets…' %}
          li: a(href="#", ng-click="set_supplier()", ng-show="selected", title='{% trans "Set the supplier for the selection" %}'){% trans 'Set supplier…' %}
+         li: a(href="#", ng-click="set_shelf()", ng-show="selected", title='{% trans "Set the shelf for the selection" %}'){% trans 'Set shelf…' %}
 
      .btn-group
        button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") {% trans "Export" %}…
