--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -49,6 +49,8 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
             div.form-group
                 label {% trans "Public price" %}:
                 input.form-control(type="number", step="0.1", min="0", ng-model="price")
+                label {% trans "Selling price" %} ({% trans "leave blank if it's the same than the public price" %}):
+                input.form-control(type="number", step="0.1", min="0", ng-model="selling_price")
                 label Type:
                 select.form-control(ng-model="type", ng-options="type.fields.name for type in card_types")
                 label {% trans "Shelf" %}:
