(revert) navBar: if ISBN not found, don't go to card_create, show warning
[ci skip]

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -71,7 +71,7 @@ html(ng-app="abelujo")
 
         form.navbar-form.navbar-left
           .form-group
-            input.form-control(
+            input.form-control#navbar-input(
               style="background-color: #F7F7F9"
               typeahead-loading="loadingCards"
               ng-model='copy_selected'
