--- a/templates/base.jade
+++ b/templates/base.jade
@@ -55,6 +55,9 @@ html(ng-app="abelujo")
             {% get_current_language as LANGUAGE_CODE %}
             ul.dropdown-menu
                 li(href="#")
+                  a(href='/{{ LANGUAGE_CODE }}/stock/card/create') {% trans "Add a card manually" %}
+                li.divider(role="separator")
+                li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/place', title='{% trans "List and edit the bookshop\'s places" %}') {% trans "Places" %}
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/shelf', title='{% trans "List and edit the shelves" %}') {% trans "Shelves" %}
