Sell UI: remove selling place select
[ci skip]

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -74,7 +74,7 @@ div.ng-cloak(ng-controller="sellController")
                a.btn.btn-default(type='button', href='/databasesearch/client/add/', title='{% trans "Create" %} {% trans "client" %}', target='_blank')
                  i.glyphicon.glyphicon-plus
 
-        .col-md-3
+        //- .col-md-3
           form
             label {% trans "Selling place" %}
             select.form-control(
