Basket bill: better document title: "Bill + YMD"
[ci skip]

--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -170,7 +170,7 @@
 
             <tr>
               <td colspan="2">
-                <h3> {% trans "Object" %}: {% trans "sell" %}</h3>
+                <h3> {{ document_title }}</h3>
               </td>
             </tr>
 
