--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -139,7 +139,8 @@ div(ng-cloak, ng-controller="basketsController")
        textarea(cols=80, rows=6, ng-model="cur_basket.comment")
      button.button.btn.btn-default(ng-click="save_basket()") {% trans "Save" %}
 
-   div.middle(style="height: 30%; width: 30%"): em(ng-hide="copies.length") {% trans "This list has no books inside… yet." %}
+   div.middle(ng-hide="copies.length", style="height: 30%; width: 30%")
+     em {% trans "This list has no books inside… yet." %}
    div.middle(ng-hide="copies.length", style="height: 80%; width: 30%")
      img(src="/static/search/bee.png", height="200px", style="opacity: 0.7")
 
