(minor) hide bill and estimate in Lists
[ci skip]

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -95,8 +95,8 @@ div(ng-cloak, ng-controller="basketsController")
 
          li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=false&covers=true") {% trans "List, with covers" %} - pdf
          li.divider(role="separator")
-         li: a(href="#", ng-click="choose_client_for_bill(cur_basket.id, 1)", title='{% trans "Create a bill for a client" %}') {% trans "Bill" %}…
-         li: a(href="#", ng-click="choose_client_for_bill(cur_basket.id, 2)", title='{% trans "Create an estimate for a client" %}') {% trans "Estimate" %}…
+         //- li: a(href="#", ng-click="choose_client_for_bill(cur_basket.id, 1)", title='{% trans "Create a bill for a client" %}') {% trans "Bill" %}…
+         //- li: a(href="#", ng-click="choose_client_for_bill(cur_basket.id, 2)", title='{% trans "Create an estimate for a client" %}') {% trans "Estimate" %}…
 
 
      .btn-group
