html: avoid NOT FOUND {{it.cover}} and alike. Use ng-src directive.
even inside an ng-show, the browser wants to fetch the img src.

https://code.angularjs.org/1.3.20/docs/api/ng/directive/ngSrc

[ci skip]

for #204

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -204,7 +204,7 @@ div(ng-cloak, ng-controller="basketsController")
 
          td(ng-show="show_images")
             .col-md-6(ng-show="show_images")
-              img.myImg(ng-show="it.cover", src="{{ 'it.cover' | ng }}")
+              img.myImg(ng-show="it.cover", ng-src="{{ 'it.cover' | ng }}")
          td
            .col-md-12
             a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
