--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -59,7 +59,7 @@ div#abelujo
     .col-lg-4
 
       .row(style="margin-left: 1px;")
-        img.img-responsive(src="{{ object.cover }}")
+        img.img-responsive(ng-src="{{ object.cover }}")
 
       .row(style="margin-left: 1px;")
 
