--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -152,7 +152,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
                 tr(ng-repeat="card in cards")
                   td(ng-show="show_images")
                     .col-md-6(ng-show="show_images")
-                      img.myImg(ng-show="card.cover", src="{{ 'card.cover' | ng }}")
+                      img.myImg(ng-show="card.cover", ng-src="{{ 'card.cover' | ng }}")
 
                   td.col-md-6
                     span: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
